changement design et infos

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bâtisseur — Construction & Vente de Terrains</title>
+    <title>
+      Entreprise Sow et Freres — Construction, TP, Élevage, Agriculture,
+      Commerce, Import-Export
+    </title>
     <meta
       name="description"
-      content="Entreprise de construction et vente de terrains. Projets clés en main, lotissements, rénovation et accompagnement de A à Z."
+      content="Entreprise Sow et Freres: Construction de bâtiments, Travaux Publics, Élevage, Agriculture, Commerce Général, Import-Export, Services et Transport."
     />
     <meta
       property="og:title"
-      content="Bâtisseur — Construction & Vente de Terrains"
+      content="Entreprise Sow et Freres — Construction, TP, Élevage, Agriculture, Commerce, Import-Export"
     />
     <meta
       property="og:description"
-      content="Entreprise de construction et vente de terrains. Projets clés en main, lotissements, rénovation et accompagnement de A à Z."
+      content="Construction de bâtiments, Travaux Publics, Élevage, Agriculture, Commerce Général, Import-Export, Services et Transport."
     />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
@@ -29,9 +32,13 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a href="#accueil" class="logo" aria-label="Bâtisseur Accueil">
-          <span class="logo-mark">B</span>
-          <span class="logo-text">Bâtisseur</span>
+        <a
+          href="#accueil"
+          class="logo"
+          aria-label="Entreprise Sow et Freres Accueil"
+        >
+          <span class="logo-mark">E</span>
+          <span class="logo-text">Entreprise Sow et Freres</span>
         </a>
         <nav class="nav" aria-label="Navigation principale">
           <button class="nav-toggle" aria-expanded="false" aria-controls="menu">
@@ -44,7 +51,7 @@
             <li><a href="#dg">Directeur Général</a></li>
             <li><a href="#projets">Projets</a></li>
             <li>
-              <a href="#contact" class="btn btn-primary btn-small">Contact</a>
+              <a href="#contact" class="btn btn-outline btn-small">Contact</a>
             </li>
           </ul>
         </nav>
@@ -109,19 +116,21 @@
                 <li>Clés en main</li>
                 <li>Gros oeuvre & second oeuvre</li>
                 <li>Gestion de chantier</li>
+                <li>Études techniques, permis & conformité</li>
               </ul>
             </article>
             <article class="card">
               <div class="card-icon">🌄</div>
-              <h3>Vente de terrains</h3>
+              <h3>Conseil & courtage foncier</h3>
               <p>
-                Parcelles viabilisées, lotissements et accompagnement juridique
-                pour des achats sereins.
+                Nous n'assurons pas la vente directe : nous vous conseillons et
+                mobilisons un réseau de vendeurs qualifiés
               </p>
               <ul class="card-list">
-                <li>Études & bornage</li>
-                <li>Titres et documents</li>
-                <li>Financement</li>
+                <li>Prospection ciblée et sélection d'opportunités</li>
+                <li>Due diligence foncière (bornage, titres, antériorités)</li>
+                <li>Négociation et sécurisation contractuelle</li>
+                <li>Accompagnement bancaire et montage financier</li>
               </ul>
             </article>
             <article class="card">
@@ -135,6 +144,8 @@
                 <li>Audit & conception</li>
                 <li>Travaux rapides</li>
                 <li>Garantie & suivi</li>
+
+                <li>Finitions & design intérieur</li>
               </ul>
             </article>
           </div>
@@ -146,17 +157,23 @@
           <div>
             <h2>À propos de l'entreprise</h2>
             <p>
-              Nous sommes une entreprise de construction et d'aménagement
-              foncier, engagée pour la qualité, la sécurité et la durabilité.
-              Notre approche intègre la conception, la réalisation et la
-              gestion, pour livrer des projets fiables qui valorisent votre
-              patrimoine.
+              Nous sommes une entreprise pluridisciplinaire, engagée pour la
+              qualité, la sécurité et la durabilité. Notre approche intègre la
+              conception, la réalisation et la gestion, pour livrer des projets
+              fiables qui valorisent votre patrimoine.
             </p>
             <div class="badges">
               <span class="badge">Certifié ISO</span>
               <span class="badge">Assurance décennale</span>
               <span class="badge">Partenaires bancaires</span>
             </div>
+            <h3 style="margin-top: 14px">Activités principales</h3>
+            <ul class="card-list">
+              <li>Construction de bâtiments & Travaux Publics</li>
+              <li>Élevage & Agriculture</li>
+              <li>Commerce Général & Import-Export</li>
+              <li>Prestation de services & Transport</li>
+            </ul>
           </div>
           <div class="feature-boxes">
             <div class="feature-box">
@@ -260,14 +277,14 @@
                 <span class="ci-icon">📍</span>
                 <div>
                   <strong>Adresse</strong>
-                  <p>Av. de l'Industrie, 10000, Ville</p>
+                  <p>Pikine, Sor Saint-Louis (Sénégal)</p>
                 </div>
               </li>
               <li>
                 <span class="ci-icon">📞</span>
                 <div>
                   <strong>Téléphone</strong>
-                  <p><a href="tel:+33123456789">+33 1 23 45 67 89</a></p>
+                  <p><a href="tel:+33123456789">+221 77 150 39 02</a></p>
                 </div>
               </li>
               <li>
@@ -365,8 +382,8 @@
       <div class="container footer-grid">
         <div>
           <div class="logo logo-footer">
-            <span class="logo-mark">B</span>
-            <span class="logo-text">Bâtisseur</span>
+            <span class="logo-mark">E</span>
+            <span class="logo-text">Entreprise Sow et Freres</span>
           </div>
           <p>Construire durablement, valoriser vos terrains et vos idées.</p>
           <div class="socials" aria-label="Réseaux sociaux">
@@ -419,7 +436,8 @@
         </div>
         <div class="footer-bottom">
           <small
-            >© <span id="year"></span> Bâtisseur. Tous droits réservés.</small
+            >© <span id="year"></span> Entreprise Sow et Freres. Tous droits
+            réservés.</small
           >
         </div>
       </div>
