feat: carousel for Réalisations with autoplay + prev/next, fixed captions visibility, responsive height, and stable autoplay restart

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a href="#contact" class="btn btn-outline">Nous contacter</a>
             </div>
             <ul class="hero-stats">
-              <li><strong>120+</strong><span>Projets livrés</span></li>
+              <li><strong>50+</strong><span>Projets livrés</span></li>
               <li><strong>10+</strong><span>Années d'expérience</span></li>
               <li><strong>50 ha</strong><span>Terrains aménagés</span></li>
             </ul>
@@ -116,7 +116,7 @@
                 <li>Clés en main</li>
                 <li>Gros oeuvre & second oeuvre</li>
                 <li>Gestion de chantier</li>
-                <li>Études techniques, permis & conformité</li>
+                <li>Études techniques Pro</li>
               </ul>
             </article>
             <article class="card">
@@ -127,10 +127,12 @@
                 mobilisons un réseau de vendeurs qualifiés
               </p>
               <ul class="card-list">
-                <li>Prospection ciblée et sélection d'opportunités</li>
+                <li>
+                  Prospection <br />
+                  ciblée et sélection d'opportunités
+                </li>
                 <li>Due diligence foncière (bornage, titres, antériorités)</li>
                 <li>Négociation et sécurisation contractuelle</li>
-                <li>Accompagnement bancaire et montage financier</li>
               </ul>
             </article>
             <article class="card">
@@ -167,7 +169,7 @@
               <span class="badge">Assurance décennale</span>
               <span class="badge">Partenaires bancaires</span>
             </div>
-            <h3 style="margin-top: 14px">Activités principales</h3>
+            <h3 class="mt-14">Activités principales</h3>
             <ul class="card-list">
               <li>Construction de bâtiments & Travaux Publics</li>
               <li>Élevage & Agriculture</li>
@@ -218,7 +220,7 @@
             <div class="dg-meta">
               <div>
                 <strong>Nom :</strong>
-                <span>Jean Dupont</span>
+                <span>Alassane Sow</span>
               </div>
               <div>
                 <strong>Fonction :</strong>
@@ -226,8 +228,8 @@
               </div>
               <div>
                 <strong>Contact :</strong>
-                <a href="mailto:contact@votre-entreprise.com"
-                  >contact@votre-entreprise.com</a
+                <a href="mailto:Entreprise-sow-et-freres@gmail.com"
+                  >Entreprise-sow-et-freres@gmail.com</a
                 >
               </div>
             </div>
@@ -241,28 +243,46 @@
             <h2>Réalisations</h2>
             <p>Une sélection de projets livrés récemment.</p>
           </header>
-          <div class="projects grid grid-3">
-            <figure class="project-card">
-              <img
-                src="https://images.unsplash.com/photo-1502003148287-a82ef80a6abc?q=80&w=1200&auto=format&fit=crop"
-                alt="Immeuble résidentiel contemporain"
-              />
-              <figcaption>Résidentiel — 4 500 m²</figcaption>
-            </figure>
-            <figure class="project-card">
-              <img
-                src="https://images.unsplash.com/photo-1487956382158-bb926046304a?q=80&w=1200&auto=format&fit=crop"
-                alt="Lotissement et aménagement de voiries"
-              />
-              <figcaption>Lotissement — 30 parcelles</figcaption>
-            </figure>
-            <figure class="project-card">
-              <img
-                src="https://images.unsplash.com/photo-1582582482726-80a64cda9a4d?q=80&w=1200&auto=format&fit=crop"
-                alt="Bâtiment industriel"
-              />
-              <figcaption>Industriel — 3 200 m²</figcaption>
-            </figure>
+          <div class="projects">
+            <div class="carousel" data-carousel>
+              <div class="carousel-track">
+                <figure class="project-card">
+                  <img
+                    src="https://images.unsplash.com/photo-1502003148287-a82ef80a6abc?q=80&w=1200&auto=format&fit=crop"
+                    alt="Immeuble résidentiel contemporain"
+                  />
+                  <figcaption>Résidentiel — 4 500 m²</figcaption>
+                </figure>
+                <figure class="project-card">
+                  <img
+                    src="https://images.unsplash.com/photo-1487956382158-bb926046304a?q=80&w=1200&auto=format&fit=crop"
+                    alt="Lotissement et aménagement de voiries"
+                  />
+                  <figcaption>Lotissement — 30 parcelles</figcaption>
+                </figure>
+                <figure class="project-card">
+                  <img
+                    src="https://plus.unsplash.com/premium_photo-1682147020653-5fc87e1073c6?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="Bâtiment industriel"
+                  />
+                  <figcaption>Industriel — 3 200 m²</figcaption>
+                </figure>
+              </div>
+              <button
+                class="carousel-btn prev"
+                aria-label="Précédent"
+                type="button"
+              >
+                ‹
+              </button>
+              <button
+                class="carousel-btn next"
+                aria-label="Suivant"
+                type="button"
+              >
+                ›
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -292,8 +312,8 @@
                 <div>
                   <strong>Email</strong>
                   <p>
-                    <a href="mailto:contact@votre-entreprise.com"
-                      >contact@votre-entreprise.com</a
+                    <a href="mailto:Entreprise-sow-et-freres@gmail.com"
+                      >Entreprise-sow-et-freres@gmail.com</a
                     >
                   </p>
                 </div>
