--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a href="#accueil">Accueil</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#entreprise">Entreprise</a></li>
-            <li><a href="#dg">Directeur Général</a></li>
+            <li><a href="#dg">DG</a></li>
             <li><a href="#projets">Projets</a></li>
             <li>
               <a href="#contact" class="btn btn-outline btn-small">Contact</a>
@@ -205,10 +205,7 @@
       <section id="dg" class="section">
         <div class="container grid grid-2 dg-grid">
           <div class="dg-photo">
-            <img
-              src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?q=80&w=1200&auto=format&fit=crop"
-              alt="Portrait du Directeur Général"
-            />
+            <img src="src/profil.jpg" alt="Portrait du Directeur Général" />
           </div>
           <div class="dg-bio">
             <h2>Mot du Directeur Général</h2>
@@ -248,24 +245,117 @@
               <div class="carousel-track">
                 <figure class="project-card">
                   <img
-                    src="https://images.unsplash.com/photo-1502003148287-a82ef80a6abc?q=80&w=1200&auto=format&fit=crop"
-                    alt="Immeuble résidentiel contemporain"
+                    src="src/projects/WhatsApp Image 2025-09-09 at 17.31.57_33e6d85c.jpg"
+                    alt="Projet de construction 1"
                   />
-                  <figcaption>Résidentiel — 4 500 m²</figcaption>
+                  <figcaption>Projet de construction 1</figcaption>
                 </figure>
                 <figure class="project-card">
                   <img
-                    src="https://images.unsplash.com/photo-1487956382158-bb926046304a?q=80&w=1200&auto=format&fit=crop"
-                    alt="Lotissement et aménagement de voiries"
+                    src="src/projects/WhatsApp Image 2025-09-09 at 17.31.58_73b8d610.jpg"
+                    alt="Projet de construction 2"
                   />
-                  <figcaption>Lotissement — 30 parcelles</figcaption>
+                  <figcaption>Projet de construction 2</figcaption>
                 </figure>
                 <figure class="project-card">
                   <img
-                    src="https://plus.unsplash.com/premium_photo-1682147020653-5fc87e1073c6?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    alt="Bâtiment industriel"
+                    src="src/projects/WhatsApp Image 2025-09-09 at 17.31.58_a73b5c02.jpg"
+                    alt="Projet de construction 3"
                   />
-                  <figcaption>Industriel — 3 200 m²</figcaption>
+                  <figcaption>Projet de construction 3</figcaption>
+                </figure>
+                <figure class="project-card">
+                  <img
+                    src="src/projects/WhatsApp Image 2025-09-09 at 17.31.58_c4e52835.jpg"
+                    alt="Projet de construction 4"
+                  />
+                  <figcaption>Projet de construction 4</figcaption>
+                </figure>
+                <figure class="project-card">
+                  <img
+                    src="src/projects/WhatsApp Image 2025-09-09 at 17.31.58_c808dd58.jpg"
+                    alt="Projet de construction 5"
+                  />
+                  <figcaption>Projet de construction 5</figcaption>
+                </figure>
+                <figure class="project-card">
+                  <img
+                    src="src/projects/WhatsApp Image 2025-09-09 at 17.31.59_3261288c.jpg"
+                    alt="Projet de construction 6"
+                  />
+                  <figcaption>Projet de construction 6</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-09 at 17.31.59_7b1fcbf5.mp4"
+                    alt="Vidéo de projet 1"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 1</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-15 at 12.57.25_e73b9d64.mp4"
+                    alt="Vidéo de projet 2"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 2</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-15 at 12.57.26_71a6bede.mp4"
+                    alt="Vidéo de projet 3"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 3</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-15 at 12.57.26_8d022055.mp4"
+                    alt="Vidéo de projet 4"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 4</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-15 at 12.57.26_a8d6c38e.mp4"
+                    alt="Vidéo de projet 5"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 5</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-15 at 12.57.26_c7968f6f.mp4"
+                    alt="Vidéo de projet 6"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 6</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-15 at 12.57.27_9a219511.mp4"
+                    alt="Vidéo de projet 7"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 7</figcaption>
+                </figure>
+                <figure class="project-card video-card">
+                  <video
+                    src="src/projects/WhatsApp Video 2025-09-15 at 12.57.27_f7c4ee92.mp4"
+                    alt="Vidéo de projet 8"
+                    muted
+                    loop
+                  />
+                  <figcaption>Vidéo de projet 8</figcaption>
                 </figure>
               </div>
               <button
@@ -304,7 +394,7 @@
                 <span class="ci-icon">📞</span>
                 <div>
                   <strong>Téléphone</strong>
-                  <p><a href="tel:+33123456789">+221 77 150 39 02</a></p>
+                  <p><a href="tel:+221771503902">+221 77 150 39 02</a></p>
                 </div>
               </li>
               <li>
@@ -360,7 +450,7 @@
                     id="phone"
                     name="phone"
                     type="tel"
-                    placeholder="+33 ..."
+                    placeholder="+221 ..."
                   />
                 </div>
                 <div class="form-field">
@@ -462,6 +552,26 @@
         </div>
       </div>
     </footer>
+
+    <!-- Lightbox modal for project images and videos -->
+    <div
+      id="lightbox"
+      class="lightbox"
+      aria-hidden="true"
+      role="dialog"
+      aria-modal="true"
+      tabindex="-1"
+    >
+      <button class="lightbox-close" aria-label="Fermer">×</button>
+      <div class="lightbox-content">
+        <img alt="" class="lightbox-media" />
+        <video controls class="lightbox-media" muted loop></video>
+      </div>
+      <p class="lightbox-caption"></p>
+    </div>
+
+    <!-- Custom notifications -->
+    <div id="notifications" class="notifications" aria-live="polite"></div>
 
     <script src="script.js"></script>
   </body>
