--- a/index.html
+++ b/index.html
@@ -497,19 +497,6 @@
           </div>
           <p>Construire durablement, valoriser vos terrains et vos idées.</p>
           <div class="socials" aria-label="Réseaux sociaux">
-            <a href="#" aria-label="LinkedIn" title="LinkedIn">
-              <svg
-                width="22"
-                height="22"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.05c.53-1 1.83-2.2 3.77-2.2 4.03 0 4.78 2.65 4.78 6.1V24h-4v-6.7c0-1.6-.03-3.7-2.25-3.7-2.26 0-2.6 1.76-2.6 3.58V24h-4V8z"
-                />
-              </svg>
-            </a>
             <a href="#" aria-label="Facebook" title="Facebook">
               <svg
                 width="22"
@@ -523,7 +510,7 @@
                 />
               </svg>
             </a>
-            <a href="#" aria-label="Twitter" title="Twitter">
+            <a href="#" aria-label="Instagram" title="Instagram">
               <svg
                 width="22"
                 height="22"
@@ -532,7 +519,7 @@
                 aria-hidden="true"
               >
                 <path
-                  d="M24 4.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337 3c-.951.564-2.005.974-3.127 1.195A4.916 4.916 0 0 0 16.616 3c-2.72 0-4.924 2.205-4.924 4.924 0 .386.044.76.127 1.122C7.728 8.89 4.1 6.92 1.671 3.905a4.822 4.822 0 0 0-.666 2.475c0 1.708.87 3.213 2.19 4.096a4.903 4.903 0 0 1-2.23-.616v.062c0 2.385 1.697 4.374 3.95 4.827a4.935 4.935 0 0 1-2.224.084c.626 1.953 2.444 3.376 4.6 3.417A9.867 9.867 0 0 1 0 19.54a13.94 13.94 0 0 0 7.548 2.212c9.057 0 14.01-7.507 14.01-14.01 0-.214-.005-.426-.014-.637A10.01 10.01 0 0 0 24 4.557z"
+                  d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
                 />
               </svg>
             </a>
